Oppdaterte kafka-key-generator til å bruke jib-distroless convention